<resources>
    <string name="app_name">BarTheWay</string>
    <string name="button_search">Search</string>
    <string name="button_connect">Connect</string>
    <string name="txtReceiveHint">Waiting for student to scan card</string>
    <string name="txtGameHint">Choose a game for borrowing</string>
    <string name="mBtnClear">Clear Input</string>
    <string name="btnStudent">Student</string>
    <string name="btnBartender">Bartender</string>
    <string name="title">Title</string>
    <string name="menu_current">Current Borrowers</string>
    <string name="menu_bluetooth_settings">Bluetooth settings</string>
    <string name="menu_previous">Previous Borrowers</string>
    <string name="menu_account">Account settings</string>
    <string name="menu_delete">Delete game</string>
    <string name="menu_add">Add game</string>
    <string name="menu_logout">Logout</string>
    <string name="toolbar_title_browse">BarTheWay</string>
    <string name="password">Password</string>
    <string name="language">Language</string>
    <string name="add_description">Description</string>
    <string name="add_minimum_players">Minimum players</string>
    <string name="add_maximum_players">Maximum players</string>
    <string name="add_duration">Duration</string>
    <string name="add_year">Year</string>
    <string name="login_password">password</string>
    <string name="current_borrowers_title">Current borrowers</string>
    <string name="text_Login">Login as student or bartender</string>
    <string name="login_as_student_or_bartender">Log in as student or bartender</string>
</resources>
