<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddItemActivity">
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/title"
            android:hint="@string/title"
            android:textSize="25sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="Autofill"/>

        <EditText
            android:id="@+id/language"
            android:hint="@string/language"
            android:textSize="25sp"
            android:layout_below="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="Autofill"/>

        <EditText
            android:id="@+id/description"
            android:hint="@string/add_description"
            android:textSize="25sp"
            android:layout_below="@+id/language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="Autofill"/>

        <EditText
            android:id="@+id/minPlayers"
            android:hint="@string/add_minimum_players"
            android:textSize="25sp"
            android:inputType="number"
            android:layout_below="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="Autofill"/>


        <EditText
            android:id="@+id/maxPlayers"
            android:hint="@string/add_maximum_players"
            android:inputType="number"
            android:textSize="25sp"
            android:layout_below="@+id/minPlayers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="Autofill"/>

        <EditText
            android:id="@+id/duration"
            android:hint="@string/add_duration"
            android:textSize="25sp"
            android:layout_below="@+id/maxPlayers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="Autofill"/>

        <EditText
            android:id="@+id/year"
            android:hint="@string/add_year"
            android:inputType="number"
            android:textSize="25sp"
            android:layout_below="@+id/duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="Autofill"/>

    </RelativeLayout>

</android.support.v4.widget.NestedScrollView>