<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constrainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Browse.BrowseActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/txtReceive"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_test">

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/swipeRefresh"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toTopOf="@+id/txtGame"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_test">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/item_recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </android.support.v4.widget.SwipeRefreshLayout>


    </LinearLayout>



    <CheckBox
        android:id="@+id/chkReceiveText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:checked="true"
        android:text="Read"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Go to test"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chkReceiveText" />


    <TextView
        android:id="@+id/txtReceive"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@android:drawable/alert_light_frame"
        android:hint="@string/txtReceiveHint"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btnClearInput"
        app:layout_constraintEnd_toStartOf="@+id/txtGame"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtGame"
        android:layout_width="182dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@android:drawable/alert_light_frame"
        android:hint="@string/txtGameHint"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btnClearInput"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnClearInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/mBtnClear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



</android.support.constraint.ConstraintLayout>